Fix: flex alignment to prevent flex div distortion

--- a/frontend/src/Components/NavBubble/NavBubble.css
+++ b/frontend/src/Components/NavBubble/NavBubble.css
@@ -1,11 +1,13 @@
 .NavBubble {
   display: flex;
+  flex-grow: 0;
   justify-content: center;
   align-items: center;
   width: 40px;
   aspect-ratio: 1/1;
   background-color: var(--bg-primary);
   border-radius: 50%;
+  align-self: center;
 }
 
 .NavBubble > img {
